# xembed-sni-proxy

./: CMakeLists.txt  Readme.md  debug.h  fdoselectionmanager.cpp  fdoselectionmanager.h  main.cpp  qsingleapplication.cpp  qsingleapplication.h  snidbus.cpp  snidbus.h  sniproxy.cpp  sniproxy.h  xcbutils.cpp  xcbutils.h
test/: CMakeLists.txt  fakewatcher.cpp  fakewatcher.h  test.cpp  test.h
